--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* CSS Reset or Normalize */
+/* Add your CSS reset or normalize styles here */
+
 /* CSS Variables */
 :root {
     --primary-color: rgb(233, 63, 97);
